--- a/src/post/Post.css
+++ b/src/post/Post.css
@@ -1,154 +1,15 @@
-@import "reset.css";
-
-header{
-    text-align: center;
-    display: grid;
-    grid-template-columns: 15px 250px 500px 450px 24px;
-    grid-template-areas:
-    'left-space times nav searchbar right-space';
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 100px;
-    line-height: 80px;
-    background-color: #b480cc;
-    box-shadow: 0 0 6px gray;
+/* @import "reset.css"; */
+.homeiconImage{
+  width: 70%;
+  height: 70%;
 }
-
-.left {
-    grid-area: left-space;
-    width: 30px;
+.container{
+  z-index: -1;
+  background-color: #37263e;
+  padding: 0;
 }
-
-.right {
-    grid-area: right-space;
-    width: 30px;
-}
-
-header .times{
-    padding-top: 10px;
-    grid-area: times;
-    font-size: 1.7rem;
-    font-weight: 700;
-    text-decoration: none;
-    color: white;
-}
-
-header nav{
-    grid-area: nav;
-}
-
-header nav li{
-    padding-top: 10px;
-    display: inline-block;
-    margin-right: 70px;
-    padding-bottom: 13px;
-}
-
-header nav li{
-    font-size: 1.4rem;
-    text-decoration: none;
-    color: #fff;
-}
-
-header nav li:hover{
-    background-color: #765d81;
-    border-bottom: 4px solid white;
-    opacity: 0.67;
-    height: 76px;
-}
-
-header ul li {
-    list-style-type: none;
-    cursor: pointer;
-  }
-
-header .search{
-    grid-area: searchbar;
-}
-
-.search {
-    padding-top: 10px;
-  position: relative;
-  height: 120px;
-  width: 400px;
-
-}
-
-input.searchBar {
+.upbar{
+  z-index: 0;
   width: 100%;
-  border: 1px solid #bbb;
-  border-radius: 8px;
-  padding: 10px 12px;
-  font-size: 14px;
-}
-
-img.searchIcon {
-    cursor: pointer;
-  position: absolute;
-  width: 17px;
-  top: 45px;
-  right: 0px;
-  margin: 0;
-}
-
-main {
-    margin-left: 200px;
-}
-
-.aside {
-  background-color: white;
-  text-align: center;
-  position: fixed;
-  background-color: white;
-  width: 200px;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  border-right: 1px solid #d3d3d3;
-  box-sizing: border-box;
-}
-.homebutton {
-  width: 200px;
-  top: 100px;
-  bottom: 100px;
-  left: 0;
-  background-color: #5f2b77;
-  background-image: url(../image/homeicon.png);
-  cursor: pointer;
-}
-.aside .option-title {
-  text-align: center;
-  padding: 20px 0 0 0;
-  font-size: 20px;
-  font-weight: 700;
-  color: gray;
-}
-.aside .option-logout {
-  bottom: 0px;
-  text-align: center;
-  padding: 50px 0 0 0;
-  font-size: 15px;
-  font-weight: 700;
-  margin-top: 210px;
-  color: red;
-  cursor: pointer;
-}
-.aside ul {
-  padding: 0 0 0 0;
-  list-style-type: none;
-  font-size: 15px;
-  margin: 32px 0;
-  line-height: 2rem;
-}
-.aside ul li {
-  cursor: pointer;
-}
-.aside ul li.on {
-  background-color: #ddd;
-  color: gray;
-}
-.aside ul li:hover {
-  color: white;
-  background-color: #444;
+  background-color: #765d81;
 }
